Added single new tab app

--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Start Page</title>
+    <script src="./unsplashFetch.js"></script>
+    <script src="./marked.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@editorjs/header@2.8.1/dist/header.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@editorjs/paragraph@2.11.3/dist/paragraph.umd.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+    <div id="background"></div>
+
+    <div class="powerline-container">
+
+        <div class="powerline-segment">
+            <div class="powerline-icon" id="weather"></div>
+        </div>
+
+        <div class="powerline-segment">
+        <div class="powerline-text" id="time"></div>
+        </div>
+
+    </div>
+
+    <div id="editorjs-container">
+        <div id="editorjs"></div>
+    </div>
+
+    </body>
+    <script src="newtab.js"></script>
+</html>
+
